Mise a jour seconde sess : - Login :  - message d’erreur si une donnée est manquante mais message commun - Crash global lors de l’ajout d’un tournoi. - AddClubViewModel hérite de MainPageViewModel. Pourquoi ???

--- a/smartchUWP/View/Register.xaml
+++ b/smartchUWP/View/Register.xaml
@@ -53,6 +53,7 @@
         <StackPanel Grid.Row="0"
                     Padding="20,20,20,20"
                     Background="{StaticResource ErrorBackgroundColor}"
+                    Visibility="{Binding IsGeneralErrorVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
                     >
             <interactivity:Interaction.Behaviors>
                 <!-- Animation du Toolkit -->
