--- a/smartchUWP/App.xaml
+++ b/smartchUWP/App.xaml
@@ -23,6 +23,7 @@
             <StackPanel Orientation="Horizontal">
 
                 <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Center" Padding="0,0,10,0"/>
+                <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding FirstName}" VerticalAlignment="Center" Padding="0,0,10,0"/>
                 
             </StackPanel>
         </DataTemplate>
