--- a/smartchUWP/View/Login.xaml
+++ b/smartchUWP/View/Login.xaml
@@ -21,6 +21,7 @@
         <StackPanel Grid.Row="0"
                     Padding="20,20,20,20"
                     Background="{StaticResource ErrorBackgroundColor}"
+                    Visibility="{Binding IsGeneralErrorVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
                     >
             <interactivity:Interaction.Behaviors>
                 <!-- Animation du Toolkit -->
@@ -44,10 +45,24 @@
                     VerticalAlignment="Center" 
                     Visibility="{Binding IsNotChargement , Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}">
             <Border Background="{StaticResource ErrorBackgroundColor}">
-                <TextBlock Text="Vos identifiants semblent incorrect" 
-                           Visibility="{Binding IsErrorConnection, Converter={StaticResource BooleanToVisibilityConverter}}" 
+                <StackPanel>
+                    <TextBlock Text="Vos identifiants semblent incorrect" 
+                               Visibility="{Binding IsErrorConnection, Converter={StaticResource BooleanToVisibilityConverter}}" 
+                               Foreground="White" 
+                               Padding="20,10,0,10"/>
+                    <TextBlock Text="Votre mail est vide" 
+                           Visibility="{Binding IsEmailVide, Converter={StaticResource BooleanToVisibilityConverter}}" 
                            Foreground="White" 
                            Padding="20,10,0,10"/>
+                    <TextBlock Text="Votre mot de passe est vide" 
+                           Visibility="{Binding IsPasswordVide, Converter={StaticResource BooleanToVisibilityConverter}}" 
+                           Foreground="White" 
+                           Padding="20,10,0,10"/>
+                    <TextBlock Text="Votre email et invalide" 
+                           Visibility="{Binding IsEmailInvalide, Converter={StaticResource BooleanToVisibilityConverter}}" 
+                           Foreground="White" 
+                           Padding="20,10,0,10"/>
+                </StackPanel>
             </Border>
             <TextBlock Text="Login" Style="{StaticResource TitleTextBlockStyle}"/>
             <TextBox x:Name="Email" 
