--- a/smartchUWP/App.xaml
+++ b/smartchUWP/App.xaml
@@ -14,17 +14,21 @@
         <conv:DateTimeConverter x:Name="DateTimeToDateConverter"/>
         <conv:DateTimeToAgeConverter x:Name="DateTimeToAgeConverter"/>
         <conv:DateTimeToDateTimeOffsetConverter x:Name="DateTimeToDateTimeOffsetConverter"/>
-        <conv:TournamentStatesConverter x:Name="TournamentStatesConverter"/>
         <conv:BooleanToVisibilityConverter x:Name="BooleanToVisibilityConverter"/>
         <conv:BooleanToIsVisibleBorderThikness x:Name="BooleanToIsVisibleBorderThikness"/>
+        <conv:StateToStringConverter x:Name="StateToStringConverter"/>
+        
         <vm1:ViewModelLocator x:Key="Locator" xmlns:vm="using:smartchUWP.ViewModel"/>
 
         <DataTemplate x:Key="ClubsList">
             <StackPanel Orientation="Horizontal">
-
+                <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Center" Padding="0,0,10,0"/>
+            </StackPanel>
+        </DataTemplate>
+        <DataTemplate x:Key="UserList">
+            <StackPanel Orientation="Horizontal">
                 <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Center" Padding="0,0,10,0"/>
                 <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding FirstName}" VerticalAlignment="Center" Padding="0,0,10,0"/>
-                
             </StackPanel>
         </DataTemplate>
     </Application.Resources>
