--- a/smartchUWP/View/Tournaments/AddTournament.xaml
+++ b/smartchUWP/View/Tournaments/AddTournament.xaml
@@ -40,10 +40,16 @@
                     <StackPanel Grid.Row="1"
                                 VerticalAlignment="Top"
                                 Margin="20">
-                        <TextBox Name="Name" Header="Nom du tournois" Text="{Binding OTournament.Name, Mode=TwoWay}"/>
+                        <TextBox Name="NameTournament" Header="Nom du tournois" Text="{Binding OTournament.NameTournament, Mode=TwoWay}"/>
                         <DatePicker Name="DateDebut" Header="Date de début" Date="{Binding OTournament.BeginDate, Mode=TwoWay, Converter={StaticResource DateTimeToDateTimeOffsetConverter}}" />
                         <DatePicker Name="DateFin" Header="Date de Fin" Date="{Binding OTournament.EndDate, Mode=TwoWay , Converter={StaticResource DateTimeToDateTimeOffsetConverter}}"/>
-                        <ComboBox Header="Etat" ItemsSource="{Binding TournamentStates}" DisplayMemberPath="Value" SelectedValuePath="Key" SelectedItem="{Binding OTournament.Etat, Mode=TwoWay, Converter={StaticResource TournamentStatesConverter}}"/>
+                        <ComboBox Header="Etat" ItemsSource="{Binding TournamentStates}" SelectedItem="{Binding OTournament.Etat, Mode=TwoWay}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Converter={StaticResource StateToStringConverter}}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
                         <ComboBox Header="Club" ItemsSource="{Binding Clubs}" DisplayMemberPath="Name" SelectedValuePath="ClubId" SelectedItem="{Binding OTournament.Club, Mode=TwoWay}" />
 
                     </StackPanel>
