--- a/smartchUWP/View/Tournaments/Tournaments.xaml
+++ b/smartchUWP/View/Tournaments/Tournaments.xaml
@@ -79,9 +79,9 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="{Binding Name }" Padding="{StaticResource paddingListTournament}"/>
+                        <TextBlock Grid.Column="0" Text="{Binding NameTournament }" Padding="{StaticResource paddingListTournament}"/>
                         <Border Grid.Column="1" BorderBrush="{StaticResource border}" BorderThickness="0,0,2,0" >
-                            <TextBlock Text="{Binding Etat}" Padding="{StaticResource paddingListTournament}"/>
+                            <TextBlock Text="{Binding Etat, Converter={StaticResource StateToStringConverter}}" Padding="{StaticResource paddingListTournament}"/>
                         </Border>
                         <TextBlock Grid.Column="2" Text="{Binding BeginDate, Converter={StaticResource DateTimeToDateConverter}}" Padding="{StaticResource paddingListTournament}"/>
                         <Border Grid.Column="3" BorderBrush="{StaticResource border}" BorderThickness="0,0,2,0">
