--- a/smartchUWP/View/AdresseForm.xaml
+++ b/smartchUWP/View/AdresseForm.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<common:BindablePage
+    xmlns:common="using:smartchUWP.View.Pages"
     x:Class="smartchUWP.View.AdresseForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -43,4 +44,4 @@
 
         </StackPanel>
     </Grid>
-</Page>
+</common:BindablePage>
