--- a/smartchUWP/View/Clubs/Clubs.xaml
+++ b/smartchUWP/View/Clubs/Clubs.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<common:BindablePage
+    xmlns:common="using:smartchUWP.View.Pages"
     x:Class="smartchUWP.View.Clubs.Clubs"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -82,4 +83,4 @@
     </Grid>
         
     
-</Page>
+</common:BindablePage>
