--- a/smartchUWP/View/MemberSelection.xaml
+++ b/smartchUWP/View/MemberSelection.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<common:BindablePage
+    xmlns:common="using:smartchUWP.View.Pages"
     x:Class="smartchUWP.View.MemberSelection"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,14 +9,14 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Page.Resources>
+    <common:BindablePage.Resources>
         <DataTemplate x:Key="MembresListAffichage">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{Binding Name}"/>
                 <TextBlock Text="{Binding FirstName}"/>
             </StackPanel>
         </DataTemplate>
-    </Page.Resources>
+    </common:BindablePage.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
@@ -41,4 +42,4 @@
         <ListView Name="MembersEntityListView" Grid.Column="2" SelectionMode="Multiple" ItemsSource="{Binding MembersEntity, Mode=TwoWay}" ItemTemplate="{StaticResource MembresListAffichage}" SelectionChanged="MembersEntityListView_SelectionChanged"/>
         
     </Grid>
-</Page>
+</common:BindablePage>
