--- a/smartchUWP/View/Membres/AddMembre.xaml
+++ b/smartchUWP/View/Membres/AddMembre.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<common:BindablePage
+    xmlns:common="using:smartchUWP.View.Pages"
     x:Class="smartchUWP.View.Membres.AddMembre"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -74,4 +75,4 @@
         </Pivot>
 
     </StackPanel>
-</Page>
+</common:BindablePage>
