--- a/smartchUWP/View/Membres/Membres.xaml
+++ b/smartchUWP/View/Membres/Membres.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<common:BindablePage
+    xmlns:common="using:smartchUWP.View.Pages"
     x:Class="smartchUWP.View.Membres.Membres"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -55,4 +56,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</Page>
+</common:BindablePage>
