--- a/smartchUWP/View/Register.xaml
+++ b/smartchUWP/View/Register.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<common:BindablePage
+    xmlns:common="using:smartchUWP.View.Pages"
     x:Class="smartchUWP.View.Register"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -106,4 +107,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</Page>
+</common:BindablePage>
