--- a/smartchUWP/View/Tournaments/AddMatch.xaml
+++ b/smartchUWP/View/Tournaments/AddMatch.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<common:BindablePage
+    xmlns:common="using:smartchUWP.View.Pages"
     x:Class="smartchUWP.View.Tournaments.AddMatch"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,14 +9,14 @@
     mc:Ignorable="d"
     DataContext="{Binding Source={StaticResource Locator}, Path=AddMatch}"
     >
-    <Page.Resources>
+    <common:BindablePage.Resources>
         <DataTemplate x:Key="ListeUserTemplate">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{Binding Name}"/>
                 <TextBlock Text="{Binding FirstName}"/>
             </StackPanel>
         </DataTemplate>
-    </Page.Resources>
+    </common:BindablePage.Resources>
 
     <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Button Content="Enregistrer" Command="{Binding CommandAjouterMatch}"/>
@@ -33,4 +34,4 @@
                   ItemTemplate="{StaticResource ListeUserTemplate}" 
                   SelectedItem="{Binding SelectedArbitre, Mode=TwoWay}"/>
     </StackPanel>
-</Page>
+</common:BindablePage>
