--- a/smartchUWP/View/Tournaments/Matchs.xaml
+++ b/smartchUWP/View/Tournaments/Matchs.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<common:BindablePage
+    xmlns:common="using:smartchUWP.View.Pages"
     x:Class="smartchUWP.View.Tournaments.Matchs"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,7 +9,7 @@
     mc:Ignorable="d"
     DataContext="{Binding Source={StaticResource Locator}, Path=Matchs}"
     >
-    <Page.Resources>
+    <common:BindablePage.Resources>
         <DataTemplate x:Key="HeaderTemplatePivot">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -26,6 +27,7 @@
                     <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid >
                     <Grid.ColumnDefinitions>
@@ -79,6 +81,9 @@
                 <Grid Grid.Column="2">
                     <TextBlock Text="{Binding Arbitre.Name}"/>
                 </Grid>
+                <Grid Grid.Column="3">
+                    <Button Content="Del" Command="{Binding  Source={StaticResource Locator}, Path=Matchs.CommandDeleteMatch}" CommandParameter="{Binding Mode=TwoWay}" />
+                </Grid>
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="PivotTemplate">
@@ -107,7 +112,7 @@
             </Grid>
 
         </DataTemplate>
-    </Page.Resources>
+    </common:BindablePage.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
@@ -130,4 +135,4 @@
                ItemTemplate="{StaticResource PivotTemplate}"
                Grid.Row="2"/>
     </Grid>
-</Page>
+</common:BindablePage>
